--- a/Todo/src/app/login/login.component.css
+++ b/Todo/src/app/login/login.component.css
@@ -1,26 +1,7 @@
-.loginWrap {
-    width: 274px;
-    margin: 0 auto;
-    overflow: hidden;
-    text-align: center;
-}
-
-input {
-    display: inline-block
-}
-
-span {
-    width: 20%
-}
-
-.loginBtn {
-    float: right
-}
-
 input.ng-invalid {
-    outline: 1px solid red
+    border: 3px solid red;
 }
 
 input.ng-valid {
-    outline: 1px solid gold
+    border: 3px solid green;
 }
