--- a/Todo/src/app/todo/todo-header/todo-header.component.html
+++ b/Todo/src/app/todo/todo-header/todo-header.component.html
@@ -1,4 +1,9 @@
 <header class="header">
   <h1>Todos</h1>
-  <input class="new-todo" [placeholder]="placeholder" autofocus="" [(ngModel)]="desc" (keyup.enter)="enterUp()">
+  <input
+    class="new-todo"
+    [placeholder]="placeholder"
+    autofocus=""
+    [(ngModel)]="inputValue"
+    (keyup.enter)="enterUp()">
 </header>
