--- a/helloAngular/src/app/app.component.html
+++ b/helloAngular/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <app-login></app-login>
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -19,3 +18,4 @@
   </li>
 </ul>
 
+<router-outlet></router-outlet>
